# CubeGame

./: CMakeLists.txt  README.md
common/: PerlinNoise.cpp  PerlinNoise.h  camera.cpp  camera.h  glfwStandardInit.cpp  glfwStandardInit.h  meshGenerator.cpp  meshGenerator.h  shader.cpp  shader.hpp  texMaker.cpp  texMaker.h
mapData/: 0,0,0.txt  0,0,16.txt  0,16,0.txt  0,24,0.txt  0,24,8.txt  0,8,0.txt  16,0,0.txt  16,24,24.txt  16,32,24.txt  16,32,32.txt  16,32,40.txt  16,40,24.txt  16,40,32.txt  16,56,40.txt  16,8,0.txt  24,32,24.txt  24,56,40.txt  24,56,48.txt  32,24,48.txt  32,32,24.txt  32,56,48.txt  40,24,48.txt  40,48,56.txt  48,16,16.txt  48,16,24.txt  48,16,32.txt  48,24,32.txt  48,24,40.txt  48,24,56.txt  48,32,40.txt  48,32,48.txt  48,40,48.txt  48,40,56.txt  48,48,56.txt  8,0,0.txt  8,24,0.txt  8,24,16.txt  8,24,24.txt  8,24,48.txt  8,32,24.txt  (+2 more)
shaders/: colorFragment.glsl  lineVertex.glsl  textureFragment.glsl  triVertex.glsl
src/: AxisCamera.cpp  AxisCamera.h  Character.cpp  Character.h  Chunck.cpp  Chunck.h  GameMap.cpp  GameMap.h  IntVect.cpp  IntVect.h  character.cpp  character.h  chunck.cpp  chunck.h  controller.cpp  controller.h  geometry.cpp  geometry.h  main.cpp
test/: test.cpp
